--- a/styles/main.css
+++ b/styles/main.css
@@ -13,8 +13,10 @@ html, body, input, button{
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
 }
-body{
-    background-color:var(--color--blue--) ;
+
+
+.login{
+    background:var(--color--blue--);
     width: 100vw;
     height: 100vh;
 }
@@ -27,8 +29,8 @@ header{
     padding-top: 6rem;
 }
 .logo img{
-    width: 10rem;
-    height: 10rem;
+    width: 12rem;
+    height: 12rem;
 }
 
 form{
@@ -63,6 +65,7 @@ label:hover{
     border:none;
     margin-top: 0.2rem;
     outline: none;
+    color: #ffffff;
 }
 
 .button{
@@ -74,6 +77,7 @@ label:hover{
     color: #000000b6;
     background:#fff;
     font-weight: 700;
+    cursor: pointer;
 }
 footer{
     margin-top: 8rem;
