--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -8,6 +8,7 @@
         width: 850px;
         height: 700px;
         margin-left: 400px;
+        visibility: initial;
         
     }
     .login{
