mobile e desktop finalizado

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -9,6 +9,7 @@
         height: 700px;
         margin-left: 400px;
         visibility: initial;
+        background: #fff;
         
     }
     .login{
