--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -13,7 +13,12 @@ html, body, input, button{
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
 }
-
+@media(max-width:767px){
+    body{
+        background: var(--color--blue--);
+    }
+    
+}
 
 .login{
     background:var(--color--blue--);
@@ -81,7 +86,7 @@ label:hover{
     cursor: pointer;
 }
 footer{
-    margin-top: 5rem;
+    margin-top: 8rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -89,14 +94,11 @@ footer{
     color: #fff;
     font-weight: 300;
     font-size: 0.8rem;
-    background-color: var(--color--blue--);
 }
 .interview{
-    margin: 0;
+    visibility:  hidden;
 }
 .interview img{
     width: 0rem;
-    visibility:  hidden;
-    
-
+    height: 0rem;
 }
