--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -36,7 +36,6 @@ header{
 .logo img{
     width: 12rem;
     height: 12rem;
-    overflow: hidden;
 }
 
 form{
@@ -58,6 +57,13 @@ label{
 label:hover{
   border: 2px solid #000000;
 }
+.red, .red:hover{
+    border: 2px solid var(--color--red--);
+}
+.ivi{
+    visibility: hidden;
+}
+
 
 .icon{
    margin:0.5rem;
@@ -85,6 +91,11 @@ label:hover{
     font-weight: 700;
     cursor: pointer;
 }
+
+.button:hover{
+   background: #8b9bf7;
+}
+
 footer{
     margin-top: 8rem;
     display: flex;
@@ -96,6 +107,7 @@ footer{
     font-size: 0.8rem;
 }
 .interview{
+    height: 1rem;
     visibility:  hidden;
 }
 .interview img{
